--- a/GroupMeClientAvalonia/Views/ChatsView.xaml
+++ b/GroupMeClientAvalonia/Views/ChatsView.xaml
@@ -10,17 +10,17 @@
     <ResourceDictionary>
       <BooleanToVisibilityConverter x:Key="boolToVisibilityConverter" />
 
-      --><!--<Style TargetType="{x:Type ToggleButton}"
+      <Style TargetType="{x:Type ToggleButton}"
              BasedOn="{StaticResource MahApps.Metro.Styles.MetroButton}"
              x:Key="FlatButtonNoCaps">
         <Setter Property="Controls:ButtonHelper.PreserveTextCase" Value="True"/>
-      </Style>--><!--
+      </Style>
     </ResourceDictionary>
   </UserControl.Resources>-->
 
   <Grid>
     <Grid.ColumnDefinitions>
-      <ColumnDefinition>
+      <ColumnDefinition Width="450">
         <!--<ColumnDefinition.Style>
           <Style TargetType="{x:Type ColumnDefinition}">
             <Setter Property="Width" Value="350" />
@@ -39,25 +39,13 @@
     </Grid.RowDefinitions>
 
     <!--Chats Header-->
-    <Grid Grid.Column="0" Grid.Row="0" >
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*" />
-      </Grid.ColumnDefinitions>
-      <Grid.RowDefinitions>
-        <RowDefinition/>
-        <RowDefinition Height="*" />
-      </Grid.RowDefinitions>
-
-      <Grid Grid.Row="0" Background="White">
-        <Grid.ColumnDefinitions>
-          <ColumnDefinition />
-          <ColumnDefinition Width="*" />
-          <ColumnDefinition />
-          <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-          <RowDefinition Height="55"/>
-        </Grid.RowDefinitions>
+    <Grid Grid.Column="0" Grid.Row="0"
+          ColumnDefinitions="*"
+          RowDefinitions="Auto, *">
+      
+      <Grid Grid.Row="0" Background="White"
+            ColumnDefinitions="Auto,*,Auto,Auto"
+            RowDefinitions="55">
 
         <ToggleButton Grid.Column="0"
                       IsChecked="{Binding MiniBarModeEnabled, Mode=TwoWay}"
@@ -70,13 +58,13 @@
                       Content="Chats"
                       x:Name="toggleMiniSidebar" />
 
-        <!--Controls:TextBoxHelper.Watermark="Search..."-->
         <TextBox Grid.Column="1"
                  IsVisible="{Binding IsChecked, ElementName=toggleSearchBox}"
                  AcceptsReturn="False"
                  Height="35"
                  Margin="10,0,0,0"
                  BorderThickness="0"
+                 Watermark="Search..."
                  Text="{Binding GroupChatFilter, Mode=TwoWay}"
                  x:Name="searchTextBox"/>
 
@@ -121,6 +109,7 @@
           <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
               <StackPanel>
+                
                 <!--<i:Interaction.Behaviors>
                   <ic:FluidMoveBehavior AppliesTo="Children" Duration="0:0:00.5" Tag="DataContext">
                     <ic:FluidMoveBehavior.EaseX>
