--- a/GroupMeClientAvalonia/Views/Controls/GroupControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/GroupControl.xaml
@@ -11,6 +11,11 @@
              FontFamily="Segoe UI"
              mc:Ignorable="d" d:DesignWidth="350" d:DesignHeight="150">
 
+  <i:Interaction.Behaviors>
+    <ia:EventTriggerBehavior EventName="PointerPressed">
+      <ia:InvokeCommandAction Command="{Binding Path=GroupSelected}" CommandParameter="{Binding Path=.}"/>
+    </ia:EventTriggerBehavior>
+  </i:Interaction.Behaviors>
   
   <!--<i:Interaction>
     <i:EventTrigger EventName="MouseLeftButtonDown">
@@ -18,12 +23,9 @@
     </i:EventTrigger>
   </i:Interaction.Triggers>-->
 
-    <UserControl.Resources>
-      <converters:IsZeroConverter x:Key="isZeroConverter"/>
-    </UserControl.Resources>
-
-  <Grid ColumnDefinitions="80,*,Auto"
-        RowDefinitions="Auto, *">
+  <Grid ColumnDefinitions="80,195,60"
+        RowDefinitions="Auto, *"
+        Margin="0,15,15,0">
 
     <controls:AvatarControl
             Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
@@ -53,14 +55,14 @@
     <!--TextTrimming="CharacterEllipsis"-->
     <TextBlock  Grid.Column="1" Grid.Row="2" 
                 HorizontalAlignment="Left" VerticalAlignment="Center"
-                Height="50" 
+                Height="40" 
                 FontSize="13" 
                 Foreground="#637182"
                 TextWrapping="Wrap"
                 Text="{Binding QuickPreview}"/>
 
     <!--Padding="0,7,0,0"-->
-    <TextBlock Grid.Column="2" Grid.Row="2"
+    <TextBlock Grid.Column="2" Grid.Row="1"
                HorizontalAlignment="Right"
                VerticalAlignment="Top"
                TextAlignment="Center"
