--- a/GroupMeClientAvalonia/Views/Controls/MessageControl.xaml
+++ b/GroupMeClientAvalonia/Views/Controls/MessageControl.xaml
@@ -55,7 +55,8 @@
 
       <TextBlock Margin="0,0,0,20"
                  FontSize="15"
-                 Text="{Binding Text}">
+                 Text="{Binding Text}"
+                 TextWrapping="Wrap">
         <!--<extensions:SelectableTextBlock
             FontSize="15"
             TextWrapping="Wrap"
